# Sistema-de-Recomendaci-n

./: .gitignore  README.md  pyproject.toml
data/: ejemplo2.txt  utility-matrix-10-25-2.txt
src/: cli.py  fill.py  main.py  metrics.py  predictions.py  recommendations.py  utils.py
src/sistema_de_recomendaci_n/: __init__.py
